tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0236/input.js
function arguments(a) { "use strict"; }
